product overlap fixed

--- a/card tamplate/home.css
+++ b/card tamplate/home.css
@@ -174,7 +174,7 @@ body{
 
     max-width: 236px;
     height: 196px;
-
+    margin-bottom: 6rem;
     filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.25));
     border-radius: 0px 0 0 30px;
     display: grid;
@@ -231,7 +231,7 @@ body{
 }
 
 .reviews {
-    margin: 87px 0 87px 0;
+    margin: 28px 0 87px 0;
 }
 
 .review-box {
